--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 		            <a href="https://www.linkedin.com/in/lebakhanhtrinh95/">LinkedIn</a>
               </p>
             </td>
-            <td width="5%">
-              <img src="images/picture.jpg">
+            <td width="30%">
+              <img src="images/picture.png">
             </td>
           </tr>
 		
