--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <p align="center">
                 <name>Le Ba Khanh Trinh</name>
               </p>
-              <p> I am a Research Engineer at (<a href="https://vtcc.vn/">Viettel Cyberspace Center (VTCC)</a>), where I work on Computer Vision and Artificial Intelligence. At Viettel, I've worked on <a href="https://viettelgroup.ai/service/ocr">eKYC</a>, <a href="https://apps.apple.com/na/app/viettel-bcr/id1545890444">xContact</a>.
+              <p> I am a Research Engineer at <a href="https://vtcc.vn/">Viettel Cyberspace Center (VTCC)</a>, where I work on Computer Vision and Artificial Intelligence. At Viettel, I've worked on <a href="https://viettelgroup.ai/service/ocr">eKYC</a>, <a href="https://apps.apple.com/na/app/viettel-bcr/id1545890444">xContact</a>.
               </p>
               <p>
               I received my Master's degree in Computer Science at the <a href="https://international.jnu.ac.kr/user/indexMain.action?siteId=international">Chonnam National University</a>, South Korea, where I was advised by <a href="http://sclab.jnu.ac.kr/">Prof. Hyung-Jeong Yang</a>. I did my bachelors in Computer Science at the <a href="https://en.hust.edu.vn/">Ho Chi Minh City University of Technology, Vietnam National University Ho Chi Minh City (HCMUT)</a>, Vietnam.
@@ -132,7 +132,7 @@
                 </p> 
 
                 <p>
-                  <span>&#x25cf;</span> &nbsp; <b>[April. 2020 ]</b> &nbsp; I start working (<a href="https://vtcc.vn/">Viettel Cyberspace Center (VTCC)</a>) as a Research Engineer.   
+                  <span>&#x25cf;</span> &nbsp; <b>[April. 2020 ]</b> &nbsp; I start working at <a href="https://vtcc.vn/">Viettel Cyberspace Center</a> as a Research Engineer.   
                 </p> 
 		    
             </td>
