--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <p> I am a Research Engineer at <a href="https://vtcc.vn/">Viettel Cyberspace Center (VTCC)</a>, where I work on Computer Vision and Artificial Intelligence. At Viettel, I've worked on <a href="https://viettelgroup.ai/service/ocr">eKYC</a>, <a href="https://apps.apple.com/na/app/viettel-bcr/id1545890444">xContact</a>.
               </p>
               <p>
-              I received my Master's degree in Computer Science at the <a href="https://international.jnu.ac.kr/user/indexMain.action?siteId=international">Chonnam National University</a>, South Korea, where I was advised by <a href="http://sclab.jnu.ac.kr/">Prof. Hyung-Jeong Yang</a>. I did my bachelors in Computer Science at the <a href="https://en.hust.edu.vn/">Ho Chi Minh City University of Technology, Vietnam National University Ho Chi Minh City (HCMUT)</a>, Vietnam.
+              I received my Master's degree in Computer Science at the <a href="https://international.jnu.ac.kr/user/indexMain.action?siteId=international">Chonnam National University</a>, South Korea, where I was advised by <a href="http://sclab.jnu.ac.kr/">Prof. Hyung-Jeong Yang</a>. Previously, I did my bachelors in Computer Science at the <a href="https://www.hcmut.edu.vn/en">Ho Chi Minh City University of Technology, Vietnam National University Ho Chi Minh City (HCMUT)</a>, Vietnam.
               </p>
 			  
               <p align=center>
@@ -175,7 +175,8 @@
               <br>
               <a href="https://link.springer.com/content/pdf/10.1007/s11042-020-10106-1.pdf">Full-text PDF</a> /
               <a href="https://doi.org/10.1007/s11042-020-10106-1">DOI</a> /    
-              <a href="data/TrinhLe_MTA_2021.bib">BibTeX</a>
+              <a href="data/TrinhLe_MTA_2021.bib">BibTeX</a>/
+              <a href="https://github.com/lbktrinh/KERC2019">Code</a>
 	      <p></p>
               <p>A novel emotion dataset called Korean Video Dataset for Emotion Recognition in the Wild (KVDERW).</p>
             </td>
@@ -213,7 +214,8 @@
               <br>
               <a href="data/Enhance_UNet_applsci_2020.pdf">Full-text PDF</a> /
               <a href="https://doi.org/10.3390/app10175729">DOI</a> /    
-              <a href="data/TrinhLe_applsci_2020.bib">BibTeX</a>
+              <a href="data/TrinhLe_applsci_2020.bib">BibTeX</a>/
+              <a href="https://github.com/lbktrinh/UNet_scAG">Code</a>
 	       <p></p>
               <p> A novel spatial-channel attention gate that addresses the limitations of plain skip connections in U-Net model.</p>
             </td>
