--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <td width="100%" valign="middle">
               <heading>Research</heading>
               <p>
-                I'm interested in Image Processing, Computer Vision, Machine Learning, Deep Learning. Much of my research is about inferring the physical world (shape, depth, motion, object detection and recognition) from images.
+                I'm interested in Image Processing, Computer Vision, Machine Learning, Deep Learning. Much of my research is about understanding the physical world (shape, depth, motion, object detection and recognition) from images.
               </p>
             </td>
           </tr>
@@ -124,15 +124,15 @@
             <td>
               <heading>News</heading>   
                 <p>
-                  <span>&#x25cf;</span> &nbsp; <b>[October. 2020 ]</b> &nbsp; Our paper titled: "Korean video dataset for emotion recognition in the wild" has been accepted for publication in the <a href="https://www.springer.com/journal/11042"> Multimedia Tools and Applications</a>. The full paper is available <a href="https://link.springer.com/article/10.1007/s11042-020-10106-1">here</a>.   
+                  <span>&#x25cf;</span> &nbsp; <b>[October. 2020]</b> &nbsp; Our paper titled: "Korean video dataset for emotion recognition in the wild" has been accepted for publication in the <a href="https://www.springer.com/journal/11042"> Multimedia Tools and Applications</a>. 
                 </p>    
               
                 <p>
-                  <span>&#x25cf;</span> &nbsp; <b>[August. 2020 ]</b> &nbsp; Our paper titled: "Enhancing U-Net with Spatial-Channel Attention Gate for Abnormal Tissue Segmentation in Medical Imaging" has been accepted for publication in the <a href="https://www.mdpi.com/journal/applsci"> Applied Sciences</a>. The full paper is available <a href="https://www.mdpi.com/2076-3417/10/17/5729">here</a>.   
+                  <span>&#x25cf;</span> &nbsp; <b>[August. 2020]</b> &nbsp; Our paper titled: "Enhancing U-Net with Spatial-Channel Attention Gate for Abnormal Tissue Segmentation in Medical Imaging" has been accepted for publication in the <a href="https://www.mdpi.com/journal/applsci"> Applied Sciences</a>. 
                 </p> 
 
                 <p>
-                  <span>&#x25cf;</span> &nbsp; <b>[April. 2020 ]</b> &nbsp; I start working at <a href="https://vtcc.vn/">Viettel Cyberspace Center</a> as a Research Engineer.   
+                  <span>&#x25cf;</span> &nbsp; <b>[April. 2020]</b> &nbsp; I start working at <a href="https://vtcc.vn/">Viettel Cyberspace Center</a> as a Research Engineer.   
                 </p> 
 		    
             </td>
@@ -237,12 +237,15 @@
           </tr>
         </table>
 
+
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
-            <p>
-            <br>
-            <br>
-            </p>
+            <td width="100%" valign="middle">
+              <p>
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=GhlBrJOh6gRwABfAIf1G-3KnJQVDwwFM0y937BYPVUw&cl=ffffff&w=a"></script>            
+              </p>
+              <p>Updated August 10, 2021</p>
+            </td>
           </tr>
         </table>
 
