--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
         </table>
 
 
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+        <table width="30%" align="left" border="0" cellspacing="0" cellpadding="20">
           <tr>
-            <td width="30%" valign="middle">
+            <td width="100%" valign="middle">
               <p>
         <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=GhlBrJOh6gRwABfAIf1G-3KnJQVDwwFM0y937BYPVUw&cl=ffffff&w=a"></script>            
               </p>
