--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <p align="center">
                 <name>Le Ba Khanh Trinh</name>
               </p>
-              <p> I am a Research Engineer at <a href="https://vtcc.vn/">Viettel Cyberspace Center (VTCC)</a>, where I work on Computer Vision and Artificial Intelligence. At Viettel, I've worked on <a href="https://viettelgroup.ai/service/ocr">eKYC</a>, <a href="https://apps.apple.com/na/app/viettel-bcr/id1545890444">xContact</a>.
+              <p> I am a Research Engineer at <a href="https://vtcc.vn/">Viettel Cyberspace Center (VTCC)</a>, where I work on Computer Vision and Artificial Intelligence. At VTCC, I've worked on <a href="https://viettelgroup.ai/service/ocr">eKYC</a>, <a href="https://apps.apple.com/na/app/viettel-bcr/id1545890444">xContact</a>.
               </p>
               <p>
               I received my Master's degree in Computer Science at the <a href="https://international.jnu.ac.kr/user/indexMain.action?siteId=international">Chonnam National University</a>, South Korea, where I was advised by <a href="http://sclab.jnu.ac.kr/">Prof. Hyung-Jeong Yang</a>. Previously, I did my bachelors in Computer Science at the <a href="https://www.hcmut.edu.vn/en">Ho Chi Minh City University of Technology, Vietnam National University Ho Chi Minh City (HCMUT)</a>, Vietnam.
@@ -225,7 +225,6 @@
 	  </tr>
         </table>  
 	      
-        
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="100%" valign="middle">
@@ -237,14 +236,13 @@
           </tr>
         </table>
 
-
-        <table width="30%" align="left" border="0" cellspacing="0" cellpadding="20">
+        <table width="40%" align="left" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="100%" valign="middle">
               <p>
         <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=GhlBrJOh6gRwABfAIf1G-3KnJQVDwwFM0y937BYPVUw&cl=ffffff&w=a"></script>            
               </p>
-              <p>Updated August 10, 2021</p>
+              <p>Updated August 10, 2021.</p>
             </td>
           </tr>
         </table>
